force-app/main/default/objects/import_regulations__c/import_regulations__c.object-meta.xml
<CustomObject>
    <description>該当国への人気車種</description>
    <label>輸入規制</label>
    <nameField>
        <label>輸入規制名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>