force-app/main/default/objects/import_regulations__c/fields/body_type_name__c.field-meta.xml
<CustomField>
    <fullName>body_type_name__c</fullName>
    <label>ボディタイプ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>軽</fullName>
            </value>
            <value>
                <fullName>セダン</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>ミニバン・ワンボックス</fullName>
            </value>
            <value>
                <fullName>クーペ</fullName>
            </value>
            <value>
                <fullName>ハッチバック</fullName>
            </value>
            <value>
                <fullName>ワゴン</fullName>
            </value>
            <value>
                <fullName>バイク</fullName>
            </value>
            <value>
                <fullName>オープン・コンバーチブル</fullName>
            </value>
            <value>
                <fullName>バス</fullName>
            </value>
            <value>
                <fullName>ピックアップ</fullName>
            </value>
            <value>
                <fullName>バン</fullName>
            </value>
            <value>
                <fullName>トラック</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>