force-app/main/default/objects/import_regulations__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>輸入規制</relationshipLabel>
    <relationshipName>import_regulations_country</relationshipName>
    <type>Lookup</type>
</CustomField>