force-app/main/default/objects/import_regulations__c/fields/dis_volume_to__c.field-meta.xml
<CustomField>
    <fullName>dis_volume_to__c</fullName>
    <label>排気量　To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>