force-app/main/default/objects/import_regulations__c/fields/drivetype__c.field-meta.xml
<CustomField>
    <fullName>drivetype__c</fullName>
    <label>駆動</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2WD</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>