force-app/main/default/objects/import_regulations__c/fields/ElapsedMonths_To__c.field-meta.xml
<CustomField>
    <fullName>ElapsedMonths_To__c</fullName>
    <label>経過月数　To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>