force-app/main/default/objects/import_regulations__c/fields/fuel__c.field-meta.xml
<CustomField>
    <fullName>fuel__c</fullName>
    <label>燃料</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ガソリン</fullName>
            </value>
            <value>
                <fullName>ディーゼル</fullName>
            </value>
            <value>
                <fullName>LPG</fullName>
            </value>
            <value>
                <fullName>電気</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>電気・ガソリン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>