force-app/main/default/objects/import_regulations__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>複数条件あり</description>
    <label>グレード</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>