force-app/main/default/objects/import_regulations__c/fields/handle__c.field-meta.xml
<CustomField>
    <fullName>handle__c</fullName>
    <label>ハンドル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>右</fullName>
            </value>
            <value>
                <fullName>左</fullName>
            </value>
            <value>
                <fullName>左右</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>