force-app/main/default/objects/import_regulations__c/fields/maker_relation__c.field-meta.xml
<CustomField>
    <fullName>maker_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>輸入規制</relationshipLabel>
    <relationshipName>mekar_import_regulations</relationshipName>
    <type>Lookup</type>
</CustomField>