force-app/main/default/objects/import_regulations__c/fields/Mileage_from__c.field-meta.xml
<CustomField>
    <fullName>Mileage_from__c</fullName>
    <label>距離　From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>