force-app/main/default/objects/import_regulations__c/fields/model_relation__c.field-meta.xml
<CustomField>
    <fullName>model_relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>輸入規制</relationshipLabel>
    <relationshipName>model_import_regulations</relationshipName>
    <type>Lookup</type>
</CustomField>