force-app/main/default/objects/import_regulations__c/fields/send_check__c.field-meta.xml
<CustomField>
    <fullName>send_check__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>チェックを外した場合、このデータに合致するメールが飛びません。</inlineHelpText>
    <label>送信チェック</label>
    <type>Checkbox</type>
</CustomField>