force-app/main/default/objects/import_regulations__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>複数条件あり</description>
    <label>型式</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>