force-app/main/default/objects/import_regulations__c/fields/vehicle_weight_from_to__c.field-meta.xml
<CustomField>
    <fullName>vehicle_weight_from_to__c</fullName>
    <label>車両重量　To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>